# job-portal-exam

./: .env  apilist.html  manage.py  pyproject.toml  render.yaml  requirements.txt
core/: admin.py  apps.py  aws_utils.py  models.py  resume_analysis.py  serializers.py  signals.py  storage_backends.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_remove_examschedule_correct_answer_and_more.py  0003_examschedule_exam_name.py  0003_job.py  0004_alter_user_id.py  0004_user_exam.py  0005_job_status.py  0005_rename_exam_time_examschedule_exam_end_time_and_more.py  0006_alter_examschedule_exam_end_time_and_more.py  0006_alter_job_id.py  0007_job_application_count_alter_user_is_verified_and_more.py  0008_remove_jobapplication_name.py  0009_jobapplication_name.py  0010_user_bio_alter_user_resume.py  0011_user_address.py  0012_remove_user_address_user_location.py  0013_alter_user_resume.py  0014_alter_user_resume.py  0015_user_image.py  0016_user_plan_user_subscribe_date_and_more.py  0017_alter_user_plan.py  0018_alter_user_options_alter_user_table.py  0019_alter_job_table_alter_jobapplication_table.py  0020_user_resume_key.py  0021_contact.py  0022_alter_contact_id.py  0023_alter_contact_id.py  0024_alter_contact_email_alter_contact_id.py  0025_contact_created_at.py  0026_usersubscription.py  0027_alter_user_plan.py  0028_jobapplication_resume_url.py  0029_alter_user_resume.py  (+1 more)
job_portal/: asgi.py  settings.py  urls.py  wsgi.py
job_portal_exam/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
(+2 files in other folders)
