[tool.poetry]
name = "job-website-django"
version = "0.1.0"
description = ""
authors = ["SomuChaitanyaKumarReddy <145319559+SomuChaitanyaKumarReddy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gunicorn = "^23.0.0"
django = "^5.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
